# hid_mouse

./: CMakeLists.txt  README.md  sdkconfig.old
main/: CMakeLists.txt  as5600.c  as5600.h  battery_task.c  battery_task.h  ble_hidd_demo_main.c  esp_hidd_prf_api.c  esp_hidd_prf_api.h  hid_dev.c  key_task.c  key_task.h  td_touch.c  td_touch.h
